# Chat

./: .gitignore  CMakeLists.txt  CODEOWNERS
src/client/: Authorisation.h  CMakeLists.txt  authorisation.cpp  authorisation.h  chatWindow.cpp  chatwindow.cpp  chatwindow.h  chatwindow.ui  client.cpp  functions.cpp  functions.h  loginSystem.h  loginsystem.cpp  loginsystem.h  loginsystem.ui  mainWindow.cpp  mainWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/client/caching/: cacher.cpp  cacher.h  database.cpp  database.h
src/client/caching/scripts/: tables.h
src/client/core/: chatWindow.cpp  chatWindow.h  chatwindow.ui  loginSystem.cpp  loginSystem.h  loginsystem.ui  mainWindow.cpp  mainWindow.h  mainwindow.ui
src/client/database/: database.h
src/client/database/scripts/: tables.h
src/client/network/: server.h
src/client/settings/: config.h
src/client/textures/: res.qrc
src/client/utils/: cacher.cpp  cacher.h  config.h  database.cpp  database.h
src/client/utils/scripts/: tables.h
src/client/widgets/: folderWidget.cpp  folderWidget.h  userWidget.h  widget.cpp  widget.h
src/model/: Folder.cpp  Folder.h  Message.cpp  Message.h  Person.cpp  Person.h  Status.h  User.cpp  User.h
src/server/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  room.cpp  room.h  server.cpp  serverClass.cpp  serverClass.h  user.h
